--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project1_college_intern",
   "version": "1.0.0",
-  "description": "",
+  "description": "It is college intern website and has been created using nodejs, expressjs and mongodb",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "prafful bansal",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
